--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -12,7 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px;
+  padding: 100px 50px;
   background-image: radial-gradient(#0085ff, #003465);
-  overflow-x: hidden;
+  overflow: hidden;
 }
