--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -5,13 +5,24 @@
   justify-content: center;
   max-width: 1356px;
   width: 100%;
-  min-height: 768px;
-  padding: 15px;
+  padding: 100px;
   background-image: radial-gradient(#0085ff, #003465);
   border-radius: 24px;
   box-shadow: 355px 556px 264px 0 rgba(#000, 0.01),
     200px 312px 223px 0 rgba(#000, 0.05), 89px 139px 165px 0 rgba(#000, 0.09),
     22px 35px 91px 0 rgba(#000, 0.1);
+  overflow: hidden;
+
+  @media (width < 768px) {
+    padding: 40px;
+    min-height: 100dvh;
+    border-radius: 0;
+  }
+
+  @media (width < 425px) {
+    align-items: stretch;
+    padding: 0;
+  }
 
   &__img {
     display: block;
