--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -24,8 +24,12 @@
     padding: 8px 16px;
     border: 1px solid #bcbec0;
     border-radius: 5px;
+    background-color: #fff;
     color: #000;
-    transition: border-color 200ms ease;
+    transition-property: background-color, border-color;
+    transition-duration: 200ms;
+    transition-timing-function: ease;
+  ;
 
     &::placeholder {
       color: #bcbec0;
@@ -44,6 +48,8 @@
 
     &:focus {
       color: #fff;
+      border-color: #fff;
+
       &:invalid {
         background-color: rgba(red, 0.2);
       }
